Refactor to use json instead of xml

--- a/popup.html
+++ b/popup.html
@@ -2,8 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="Mike Rottina">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900">
+  <meta name="description" content="Boombastic">
   <link rel="stylesheet" href="/lib/popup.css" type="text/css">
   <script src="/lib/boom.js" defer></script>
 </head>
