Adding dynamic selector

--- a/popup.html
+++ b/popup.html
@@ -16,113 +16,7 @@
       <div style="left: 0%; height: 0"></div><div style="left: 3.125%; height: 0"></div><div style="left: 6.25%; height: 0"></div><div style="left: 9.375%; height: 0"></div><div style="left: 12.5%; height: 0"></div><div style="left: 15.625%; height: 0"></div><div style="left: 18.75%; height: 0"></div><div style="left: 21.875%; height: 0"></div><div style="left: 25%; height: 0"></div><div style="left: 28.125%; height: 0"></div><div style="left: 31.25%; height: 0"></div><div style="left: 34.375%; height: 0"></div><div style="left: 37.5%; height: 0"></div><div style="left: 40.625%; height: 0"></div><div style="left: 43.75%; height: 0"></div><div style="left: 46.875%; height: 0"></div><div style="left: 50%; height: 0"></div><div style="left: 53.125%; height: 0"></div><div style="left: 56.25%; height: 0"></div><div style="left: 59.375%; height: 0"></div><div style="left: 62.5%; height: 0"></div><div style="left: 65.625%; height: 0"></div><div style="left: 68.75%; height: 0"></div><div style="left: 71.875%; height: 0"></div><div style="left: 75%; height: 0"></div><div style="left: 78.125%; height: 0"></div><div style="left: 81.25%; height: 0"></div><div style="left: 84.375%; height: 0"></div><div style="left: 87.5%; height: 0"></div><div style="left: 90.625%; height: 0"></div><div style="left: 93.75%; height: 0"></div><div style="left: 96.875%; height: 0"></div>
     </div>
 
-    <select id="chartselector">
-
-      <option disabled="disabled">WEB FAVES :::::::::::::::::::::::::::::::::::::::::</option>
-      <option value="https://feeds.feedburner.com/indieshuffle?format=xml">&nbsp;&nbsp;Indie Shuffle</option>
-      <option value="https://pitchfork.com/feed/reviews/best/tracks/rss">&nbsp;&nbsp;Pitchfork | Best New Tracks</option>
-      <option value="https://pitchfork.com/feed/reviews/best/reissues/rss">&nbsp;&nbsp;Pitchfork | Best New Reissues</option>
-      <option value="custom-playlist-prince">&nbsp;&nbsp;Unique Playlist | Prince's &lsquo;New Girl&rsquo; Party Mix</option><!-- https://boingboing.net/2016/04/25/listen-to-princes-personal-p.html -->
-
-      <option disabled="disabled">BILLBOARD HOT 100 :::::::::::::::::::::::::::</option>
-      <option value="custom-bilboard-2023">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2023</option>
-      <option value="custom-bilboard-2022">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2022</option>
-      <option value="custom-bilboard-2021">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2021</option>
-      <option value="custom-bilboard-2020">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2020</option>
-      <option value="custom-bilboard-2019">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2019</option>
-      <option value="custom-bilboard-2018">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2018</option>
-      <option value="custom-bilboard-2017">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2017</option>
-      <option value="custom-bilboard-2016">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2016</option>
-      <option value="custom-bilboard-2015">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2015</option>
-      <option value="custom-bilboard-2014">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2014</option>
-      <option value="custom-bilboard-2013">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2013</option>
-      <option value="custom-bilboard-2012">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2012</option>
-      <option value="custom-bilboard-2011">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2011</option>
-      <option value="custom-bilboard-2010">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2010</option>
-      <option value="custom-bilboard-2009">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2009</option>
-      <option value="custom-bilboard-2008">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2008</option>
-      <option value="custom-bilboard-2007">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2007</option>
-      <option value="custom-bilboard-2006">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2006</option>
-      <option value="custom-bilboard-2005">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2005</option>
-      <option value="custom-bilboard-2004">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2004</option>
-      <option value="custom-bilboard-2003">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2003</option>
-      <option value="custom-bilboard-2002">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2002</option>
-      <option value="custom-bilboard-2001">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2001</option>
-      <option value="custom-bilboard-2000">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 2000</option>
-      <option value="custom-bilboard-1999">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1999</option>
-      <option value="custom-bilboard-1998">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1998</option>
-      <option value="custom-bilboard-1997">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1997</option>
-      <option value="custom-bilboard-1996">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1996</option>
-      <option value="custom-bilboard-1995">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1995</option>
-      <option value="custom-bilboard-1994">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1994</option>
-      <option value="custom-bilboard-1993">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1993</option>
-      <option value="custom-bilboard-1992">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1992</option>
-      <option value="custom-bilboard-1991">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1991</option>
-      <option value="custom-bilboard-1990">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1990</option>
-      <option value="custom-bilboard-1989">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1989</option>
-      <option value="custom-bilboard-1988">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1988</option>
-      <option value="custom-bilboard-1987">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1987</option>
-      <option value="custom-bilboard-1986">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1986</option>
-      <option value="custom-bilboard-1985">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1985</option>
-      <option value="custom-bilboard-1984">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1984</option>
-      <option value="custom-bilboard-1983">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1983</option>
-      <option value="custom-bilboard-1982">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1982</option>
-      <option value="custom-bilboard-1981">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1981</option>
-      <option value="custom-bilboard-1980">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1980</option>
-      <option value="custom-bilboard-1979">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1979</option>
-      <option value="custom-bilboard-1978">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1978</option>
-      <option value="custom-bilboard-1977">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1977</option>
-      <option value="custom-bilboard-1976">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1976</option>
-      <option value="custom-bilboard-1975">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1975</option>
-      <option value="custom-bilboard-1974">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1974</option>
-      <option value="custom-bilboard-1973">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1973</option>
-      <option value="custom-bilboard-1972">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1972</option>
-      <option value="custom-bilboard-1971">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1971</option>
-      <option value="custom-bilboard-1970">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1970</option>
-      <option value="custom-bilboard-1969">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1969</option>
-      <option value="custom-bilboard-1968">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1968</option>
-      <option value="custom-bilboard-1967">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1967</option>
-      <option value="custom-bilboard-1966">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1966</option>
-      <option value="custom-bilboard-1965">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1965</option>
-      <option value="custom-bilboard-1964">&nbsp;&nbsp;Billboard | Hot 100 | #1 singles | 1964</option>
-
-      <option disabled="disabled">iTUNES :::::::::::::::::::::::::::::::::::::::::::::::</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=20/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Alternative</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=2/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Blues</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=1122/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Brazilian</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=1232/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Chinese</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=5/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Classical</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=3/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Comedy</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=6/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Country</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=17/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Dance</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=50000063/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Disney</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=25/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Easy Listening</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=50000064/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | French Pop</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=50000066/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | German Pop</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=7/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Electronic</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=18/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Hip-Hop / Rap</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=1262/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | India</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=11/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Jazz</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=27/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | J-Pop</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=51/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | K-Pop</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=12/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Latino</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=13/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | New Age</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=9/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Opera</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=14/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Pop</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=15/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | R&amp;B</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=24/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Raggae</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=21/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | Rock</option>
-      <option value="https://itunes.apple.com/us/rss/topsongs/limit=25/genre=19/explicit=true/xml">&nbsp;&nbsp;iTunes Top 25 | World</option>
-
-      <option disabled="disabled">ROLLING STONE :::::::::::::::::::::::::</option>
-      <option value="custom-rs-summersongs-1970s">&nbsp;&nbsp;Rolling Stone | 1970s | 20 Best Summer Songs</option>
-      <option value="custom-rs-pop-1984">&nbsp;&nbsp;Rolling Stone | 1984 | 20 Best Songs</option>
-      <option value="custom-rs-best-2000s">&nbsp;&nbsp;Rolling Stone | 2000s | 20 Best Songs</option>
-      <option value="custom-rs-country-saddest">&nbsp;&nbsp;Rolling Stone | 12 Saddest Country Songs</option>
-      <option value="custom-rs-hiphop-greatest">&nbsp;&nbsp;Rolling Stone | 10 Greatest Hip-Hop Songs</option>
-      <option value="custom-rs-sexiest">&nbsp;&nbsp;Rolling Stone | 10 Sexiest Songs</option>
-
+    <select>
     </select>
   </header>
   <main><ol> </ol></main>
