--- a/popup.html
+++ b/popup.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="author" content="MR,AG,CL">
+  <title>Boombastic</title>
   <meta name="description" content="Boombastic">
   <link rel="stylesheet" href="/lib/popup.css" type="text/css">
   <script src="/lib/boom.js" defer></script>
+  <meta name="author" content="MR,AG,CL">
 </head>
 <body>
   <header-component></header-component>
 
-  <main><ul> </ul></main>
+  <main>
+    <playlist-component></playlist-component>
+  </main>
+  
 </body>
 </html>
